--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,10 @@
 <app-header></app-header>
 <router-outlet></router-outlet>
+<br>
+<br>
+<br>
+<br>
+<br>
+<h1>Hola mundo</h1>
+<br>
+<app-footer></app-footer>
