--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,9 @@
 <app-header></app-header>
+
 <router-outlet></router-outlet>
-<br>
-<br>
-<br>
-<br>
-<br>
-<h1>Hola mundo</h1>
-<br>
+
+<section class="ae-container-fluid rk-main">
+  <app-portafolio></app-portafolio>
+</section>
+
 <app-footer></app-footer>
